--- a/src/main/webapps/WEB-INF/web.xml
+++ b/src/main/webapps/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 	<!-- log4j配置 -->
 	<context-param>
 		<param-name>webAppRootKey</param-name>
-		<param-value>smdemo.root</param-value>
+		<param-value>sshdemo.root</param-value>
 	</context-param>
 	<context-param>
 		<param-name>log4jConfigLocation</param-name>
@@ -18,7 +18,7 @@
 		<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
 	</listener>
 
-	<!-- Spring和mybatis的配置文件 -->
+	<!-- Spring配置文件 -->
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
 		<param-value>classpath:*.xml</param-value>
