--- a/src/main/webapps/WEB-INF/web.xml
+++ b/src/main/webapps/WEB-INF/web.xml
@@ -72,17 +72,15 @@
 	<filter>
 		<filter-name>struts2</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
+		<init-param>
+			<param-name>filterConfig</param-name>
+			<param-value>classpath:struts2/struts.xml</param-value>
+		</init-param>
 	</filter>
 	<filter-mapping>
 		<filter-name>struts2</filter-name>
 		<url-pattern>*.do</url-pattern>
 	</filter-mapping>
-
-	<!--配置404页面-->
-	<error-page>
-		<error-code>404</error-code>
-		<location>/404.jsp</location>
-	</error-page>
 
 
 	<welcome-file-list>
